--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,61 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.button{
+    display: inline-block;
+    border-radius: 200px;
+    background-color: transparent;
+    border: dashed;
+    color: royalblue;
+    text-align: center;
+    font-size: 60px;
+    padding:10px;
+    width: 500px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+.button span{
+    cursor: pointer;
+    display:inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+.button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -90px;
+    transition: 0.5s;
+}
+
+.button:hover span {
+    padding-right: 50px;
+}
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+img.logo{
+    width:600px;
+    height:205px;
+    background-position: center;
+    display:block;
+    margin: auto;
+    padding-top: 100px;
+
+}
+nav {
+    text-align: center;
+    background: transparent;
+    margin: 20px 0;
+    padding: 10px;
+}
+body{
+    background-size: 100% auto;
+}
 
 
 
